@@ -13,6 +13,10 @@ pghoard X.X.X (2016-XX-XX)
   versions require the pgespresso extension to take backups of replicas
   using the `local-tar` method, the pg_basebackup utilizing (default)
   methods have always supported backups of replicas.
+* When `local-tar` basebackups are used in exclusive mode (PG <= 9.5 without
+  pgespresso) any conflicting exclusive basebackup is automatically cancelled
+  to allow PGHoard to take its own basebackup.  This is sometimes required if
+  a previous PGHoard process has been killed while it was taking a backup.
 * Miscellaneous bug fixes
 
 pghoard 1.4.0 (2016-07-22)
